--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "scripts": {
         "start": "node ./bin/cli.js",
         "dev": "cross-env NODE_ENV=development node ./bin/cli.js",
-        "build:pkg": "pkg . --out-path dist"
+        "build:pkg": "pkg . --out-path dist",
+        "service:install": "node ./scripts/windows-service.js --config ./service/windows-service.config.json install",
+        "service:uninstall": "node ./scripts/windows-service.js --config ./service/windows-service.config.json uninstall"
     },
     "dependencies": {
         "@node-red-contrib-themes/theme-collection": "^4.1.0",
         "axios": "^1.12.2",
         "bcrypt": "^6.0.0",
         "dotenv": "^16.4.5",
-        "express": "^5.1.0",
+        "express": "4.21.2",
         "image-size": "^2.0.2",
         "jsonwebtoken": "^9.0.2",
+        "node-windows": "1.0.0-beta.8",
         "node-red": "^4.1.0",
         "node-red-contrib-cron-plus": "^2.2.4",
         "node-red-dashboard": "^3.6.6",
